--- a/src/main/resources/static/css/room.css
+++ b/src/main/resources/static/css/room.css
@@ -1,20 +1,9 @@
 @CHARSET "ISO-8859-1";
 
-.loginform{
-	
-	text-align: center;
-	position: absolute;
-	left: 40vw;
-	top: 30vh;	
-	padding: 2vw;
-	background-color: rgba(150,150,150,0.8);
-	border-radius: 10px;	
-	font-size: 18px;
-
-	
-}
 
 #conversationDiv{
+	overflow-y: auto;
+	overflow-x: hidden;
 	position: absolute;
 	background-color: rgba(150,150,150,0.8);
 	border-radius: 20px;	
@@ -45,7 +34,7 @@
 	width: 56vw;
 	height: 18vh;
 	resize: none;
-	border-radius: 20px;
+	border-radius: 5px;
 	background-color: rgba(200,200,200,0.1);
 	color: white;
 	border: 0px;
@@ -79,6 +68,8 @@
 	height: 92vh;	
 	top: 4vh;	
 	left: 74vw;
+	overflow-y: auto;
+	overflow-x: hidden;
 }
 
 
