Changed background image format to jpg

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -1,7 +1,7 @@
 @CHARSET "ISO-8859-1";
 
 body{
-	background-image: url("images/Background.png");
+	background-image: url("images/Background.jpg");
 	color: white;
 }
 
