--- a/src/main/resources/static/css/lobby.css
+++ b/src/main/resources/static/css/lobby.css
@@ -3,17 +3,23 @@
 nav{
 	text-align:center;
 	position: absolute;
-	left: 34vw;
+	left: 29.5vw;
 	top: 6vh;	
 	padding-left: 6vw;
 	padding-right: 6vw;
 	padding-top: 2vh;
 	padding-bottom: 2vh;
 	background-color: rgba(150,150,150,0.8);
-	border-radius: 10px;	
-	font-size: 18px;
+	border-radius: 20px;
+	
 
 	
+}
+
+nav button{
+	margin-left: 0.1vw;
+	font-size: 12px;
+	border-radius: 20px;
 }
 
 #rooms{
@@ -39,6 +45,28 @@ nav{
 	background-color: rgba(200,200,200,0.1);
 }
 
+#users{
+	
+	position: absolute;
+	left: 34vw;
+	top: 28vh;	
+	padding-left: 2vw;
+	padding-right: 2.7vw;
+	background-color: rgba(150,150,150,0.8);
+	border-radius: 10px;	
+	font-size: 18px;
+
+	
+}
+
+#users p{
+	border-radius: 10px;
+	padding-left: 2vw;
+	padding-right: 6vw;
+	padding-top: 0.5vh;
+	padding-bottom: 0.5vh;
+	background-color: rgba(200,200,200,0.1);
+}
 
 
 button{
@@ -48,16 +76,19 @@ button{
     padding: 0.5vw;
   	border-radius: 20px;
  	border: solid 1px #dcdcdc;	
+ 	font-size: 12px;
 }	
 
 .joinbutton{
-	font-size: 12px;
 	margin-top: 1vh;
 }
 
 .deletebutton{
-	font-size: 12px;
 	margin-left: 0.5vw;
+}
+
+.userdeletebutton{
+	margin-top: 1vh;
 }
 
 nav button{
