--- a/src/main/resources/static/css/lobby.css
+++ b/src/main/resources/static/css/lobby.css
@@ -1,5 +1,6 @@
 @CHARSET "ISO-8859-1";
 
+
 nav{
 	text-align:center;
 	position: absolute;
@@ -14,6 +15,10 @@ nav{
 	
 
 	
+}
+
+#menu{
+	display: none;
 }
 
 nav button{
