Fixed a lot of bugs, modified styles, added titles

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -5,6 +5,19 @@ body{
 	color: white;
 }
 
+.title{
+	position:absolute;
+	font-size: 24px;
+	left:44vw;
+	top: 10vh;
+	background-color: rgba(150,150,150,0.8);
+	border-radius: 10px;
+	padding-left: 2vw;
+	padding-right: 2vw;	
+	padding-top: 0.5vh;
+	padding-bottom: 0.5vh;				
+}
+
 #error{
 	font-style: italic;
 	color: #CC0000;
