--- a/src/main/resources/static/css/create_room.css
+++ b/src/main/resources/static/css/create_room.css
@@ -1,17 +1,27 @@
 @CHARSET "ISO-8859-1";
 
+.title{
+	left: 39vw;
+	width: 30vw;
+}
+
 #create_form{
 	
+	width: 30vw;
 	text-align: center;
 	position: absolute;
-	left: 40.5vw;
+	left: 39vw;
 	top: 30vh;	
-	padding: 2vw;
+	padding-top: 2vh;
+	padding-bottom: 2vh;
 	background-color: rgba(5,66,135,0.8);
 	border-radius: 10px;	
 	font-size: 18px;
-
 	
+}
+
+#create_form input{
+	width: 19vw;
 }
 
 
@@ -25,7 +35,7 @@ button{
 	
 	color: white;
 	background-color: rgba(5,66,135,0);
-    padding: 10px;
+    padding: 1vw;
   	border-radius: 20px;
  	border: solid 1px #dcdcdc;	
 }	
