--- a/src/main/resources/static/css/create_user.css
+++ b/src/main/resources/static/css/create_user.css
@@ -1,17 +1,27 @@
 @CHARSET "ISO-8859-1";
 
+.title{
+	left: 39vw;
+	width: 30vw;
+}
+
 #create_form{
-	
+	width: 30vw;
 	text-align: center;
 	position: absolute;
 	left: 39vw;
 	top: 30vh;	
-	padding: 2vw;
+	padding-top: 2vh;
+	padding-bottom: 2vh;
 	background-color: rgba(5,66,135,0.8);
 	border-radius: 10px;	
 	font-size: 18px;
 
 	
+}
+
+#create_form input{
+	width: 19vw;
 }
 
 
