--- a/src/main/resources/static/css/lobby.css
+++ b/src/main/resources/static/css/lobby.css
@@ -1,14 +1,17 @@
 @CHARSET "ISO-8859-1";
 
+.title{
+	left: 32vw;
+	width: 41vw;
+	text-align:center;	
+}
 
 nav{
-	min-width:22vw;
+	width: 41vw;
 	text-align:center;
 	position: absolute;
 	left: 32vw;
 	top: 21vh;	
-	padding-left: 6vw;
-	padding-right: 6vw;
 	padding-top: 2vh;
 	padding-bottom: 2vh;
 	background-color: rgba(5,66,135,0.8);
@@ -29,10 +32,9 @@ nav button{
 }
 
 #rooms{
-	width: 18vw;
-	max-width: 18vw;
+	width: 36vw;
 	position: absolute;
-	left: 37vw;
+	left: 32vw;
 	top: 38vh;	
 	padding-left: 2vw;
 	padding-right: 2.7vw;
@@ -47,16 +49,13 @@ nav button{
 	border-radius: 10px;
 	padding-left: 2vw;
 	padding-right: 6vw;
-	padding-top: 0.5vh;
-	padding-bottom: 0.5vh;
 	background-color: rgba(200,200,200,0.1);
 }
 
 #users{
-	width: 18vw;
-	max-width: 18vw;	
+	width: 36vw;
 	position: absolute;
-	left: 37vw;
+	left: 32vw;
 	top: 38vh;	
 	padding-left: 2vw;
 	padding-right: 2.7vw;
