--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -1,12 +1,19 @@
 @CHARSET "ISO-8859-1";
 
+.title{
+	width: 23vw;
+	text-align:center;		
+}
+
 .loginform{
 	
 	text-align: center;
 	position: absolute;
 	left: 40vw;
 	top: 30vh;	
-	padding: 2vw;
+	width: 23vw;
+	padding-top: 2vh;
+	padding-bottom: 2vh;
 	background-color: rgba(5,66,135,0.8);
 	border-radius: 10px;	
 	font-size: 18px;
@@ -14,11 +21,14 @@
 	
 }
 
+.loginform input{
+	width: 18vw;
+}
+
 #login{
-	
+	padding: 1vw;
 	color: white;
 	background-color: rgba(5,66,135,0);
-    padding: 10px;
   	border-radius: 20px;
  	border: solid 1px #dcdcdc;	
 }	
